feat: expose monthly statistics preview api
